--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap Starter Page</title>
+    <title>Module 2 Coding Assignment</title>
 
     <link rel="stylesheet" href="css/Mystyle.css">
 
